syntax = "proto3";

package twopc;

import "repos/protobuf/gogoproto/gogo.proto";
import "lib/netmsg/common/message.proto";

option go_package = "github.com/datumtechs/datum-network-carrier/lib/netmsg/consensus/twopc";


// 2pc prepare 阶段信息
message PrepareMsg {
  common.MsgOption             msg_option = 1;
  bytes                        task_info = 2 [(gogoproto.moretags) = "ssz-max:\"16777216\""];             // 任务 types.TaskData serial by pb.
  bytes                        evidence = 3 [(gogoproto.moretags) = "ssz-max:\"1024\""];                  // 选举算力的依据信息
  uint64                       create_at = 4 [(gogoproto.moretags) = "ssz-size:\"8\""];                   // proposal 创建的时间戳 (单位: ms)
  bytes                        sign = 5 [(gogoproto.moretags) = "ssz-max:\"1024\""];                      // 任务发起者签名
  bytes                        black_org = 6 [(gogoproto.moretags) = "ssz-max:\"16777216\""];
}

// 2pc prepareVote
message PrepareVote {
  common.MsgOption             msg_option = 1 [(gogoproto.moretags) = "ssz-max:\"16777216\""];
  bytes                        vote_option = 2 [(gogoproto.moretags) = "ssz-max:\"32\""];                 // PrepareVote 投票意见 (yes: 同意; no: 否决; abstention: 弃权)
  TaskPeerInfo                 peer_info = 3 [(gogoproto.moretags) = "ssz-max:\"16777216\""];             // 投票yes时, 对任务提供的自身资源 ip:port
  uint64                       create_at = 4 [(gogoproto.moretags) = "ssz-size:\"8\""];                   // vote 创建的时间戳 (单位: ms)
  bytes                        sign = 5 [(gogoproto.moretags) = "ssz-max:\"1024\""];                      // 投票发起者签名
}

// 2pc confirm 阶段信息
message ConfirmMsg {
  common.MsgOption             msg_option = 1 [(gogoproto.moretags) = "ssz-max:\"16777216\""];
  bytes                        confirm_option = 2 [(gogoproto.moretags) = "ssz-max:\"32\""];              // ConfirmMsg 指令通知 (start: 通知执行; stop: 通知终止;)
  ConfirmTaskPeerInfo          peers = 3 [(gogoproto.moretags) = "ssz-max:\"16777216\""];                 // task 各个参与方的 内部资源信息 (对外的ip:port, 做任务用的)
  uint64                       create_at = 4 [(gogoproto.moretags) = "ssz-size:\"8\""];                   // ConfirmMsg 创建的时间戳 (单位: ms)
  bytes                        sign = 5 [(gogoproto.moretags) = "ssz-max:\"1024\""];                      // ConfirmMsg 发起者签名
}

// On ConfirmMsg, the task partners peerInfo
message ConfirmTaskPeerInfo {
  repeated TaskPeerInfo data_supplier_peer_infos = 2 [(gogoproto.moretags) = "ssz-max:\"16777216\""];             // 数据参与方的 资源信息
  repeated TaskPeerInfo power_supplier_peer_infos = 3 [(gogoproto.moretags) = "ssz-max:\"16777216\""];            // 算力参与方的 资源信息
  repeated TaskPeerInfo result_receiver_peer_infos = 4 [(gogoproto.moretags) = "ssz-max:\"16777216\""];           // 结果接收方的 资源信息
}

// 2pc confirmVote
message ConfirmVote {
  common.MsgOption             msg_option = 1 [(gogoproto.moretags) = "ssz-max:\"16777216\""];
  bytes                        vote_option = 2 [(gogoproto.moretags) = "ssz-max:\"32\""];                 // ConfirmVote 投票意见 (yes: 同意; no: 否决; abstention: 弃权)
  uint64                       create_at = 3 [(gogoproto.moretags) = "ssz-size:\"8\""];                   // vote 创建的时间戳 (单位: ms)
  bytes                        sign = 4 [(gogoproto.moretags) = "ssz-max:\"1024\""];                      // 投票发起者签名
}

// 触发任务执行消息
message CommitMsg {
  common.MsgOption             msg_option = 1 [(gogoproto.moretags) = "ssz-max:\"16777216\""];
  bytes                        commit_option = 2 [(gogoproto.moretags) = "ssz-max:\"32\""];               // CommitMsg 指令通知 (start: 通知执行; stop: 通知终止;)
  uint64                       create_at = 3 [(gogoproto.moretags) = "ssz-size:\"8\""];                   // CommitMsg 创建的时间戳 (单位: ms)
  bytes                        sign = 4 [(gogoproto.moretags) = "ssz-max:\"1024\""];                      // CommitMsg 发起者签名
}

message TaskPeerInfo {
  bytes ip = 1 [(gogoproto.moretags) = "ssz-max:\"32\""];
  bytes port = 2 [(gogoproto.moretags) = "ssz-max:\"32\""];
  bytes party_id = 3 [(gogoproto.moretags) = "ssz-max:\"32\""];
}
